# django-polls

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENCE  MANIFEST.in  README.md  compose.yaml  entrypoint.sh  env.example  gunicorn.conf.py  pyproject.toml  requirements.txt  setup.cfg  vercel-static-build.sh  vercel.json
.github/workflows/: main.yaml  publish-to-test-pypi.yaml
django_polls/migrations/: 0001_initial.py
mysite/: settings.py
nginx/: nginx-no-ssl.conf  nginx.conf
nginx/templates/: default.conf.template
polls/: tests.py
polls/management/commands/: closepoll.py  ensuresuperuser.py  filldb.py
polls/templates/polls/: base.html  detail.html  index.html  results.html
