[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-polls-azol"
version = "0.0.1"
description = "A Django app to conduct web-based polls."
readme = "README.rst"
authors = [
    {name = "Artem Zolochevskii", email = "artem.zolochevskiy@gmail.com"},
]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.10"
dependencies = [
  "Django>=5.0",
]

[project.urls]
Homepage = "https://github.com/azol/django-polls/tree/package"
Repository = "https://github.com/azol/django-polls/tree/package"
